<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lab4_apps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <argument
            android:name="text"
            app:argType="string"
            android:defaultValue="Default Text" />
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.example.lab4_apps.ui.home.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lab4_apps.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lab4_apps.ui.slideshow.SlideshowFragment"
        android:label="@string/cantidad"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_resultado"
            app:destination="@id/nav_resultado" />
    </fragment>
    <fragment
        android:id="@+id/nav_resultado"
        android:name="com.example.lab4_apps.ui.sampledata.ResultadoFragment"
        android:label="fragment_resultado"
        tools:layout="@layout/fragment_resultado" >
        <argument
            android:name="listaConfirmados"
            app:argType="integer[]" />
        <argument
            android:name="listaNoConfirmados"
            app:argType="integer[]" />
        <action
            android:id="@+id/action_nav_resultado_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>